chore(integ): rewrite end-to-end test to simplify deployment, use fallback values, eliminate output file

--- a/integ/.gitignore
+++ b/integ/.gitignore
@@ -11,6 +11,10 @@ yarn-error.log
 **/cdk.context.json
 test-output/
 
+# Deadline staging
+stage/
+amis.json
+
 # Include eslint config
 !.eslintrc.js
 
